# wheel_legged_2026

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  STM32H723XG_FLASH.ld  dm_mc02.ioc  pyrightconfig.json
.ai/: network_null_c_info.json  network_policy.onnx_c_info.json
.codex-build/Debug-infantry3/: CMakeCache.txt.tmp05b39  CMakeCache.txt.tmpd1b69
.github/: filter_fixes.py  run_clang_tidy.py
.github/workflows/: build-test_target.yml  lint.yaml
.mimocode/plans/: 1783143793122-proud-harbor.md  1783196863986-kind-comet.md  1783202162893-gentle-moon.md
Core/Inc/: i2c.h  main.h  stm32h7xx_it.h  usart.h
Core/Src/: dma.c  fdcan.c  gpio.c  i2c.c  main.c  stm32h7xx_it.c  usart.c
X-CUBE-AI/App/: network.c  network.h  network_config.h  network_data.c  network_data.h  network_data_params.c  network_data_params.h  network_generate_report.txt
app/: CMakeLists.txt  add_target.cmake
app/common/: aimbot_comm_can.cc  encoder_counter.hpp  new_common_module.md  sd_log.cc  sd_log.hpp  sd_spi.cc  sd_spi.hpp
app/targets/: new_target.md
cmake/: cmsis-dsp.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: cubemx_changelog.md  hw_resource.md
docs/design/: build_recovery_refactor_doc.py  轮腿底盘倒地检测与自起模块重构设计方案.md
libs/: CMakeLists.txt
libs/tinympc_embedded_shim/: iostream  perror_stub.cpp
openocd/: README.md
outputs/solidworks_leg_measurement_20260724/: leg_cad_mass_properties_20260724.xlsx  leg_mass_properties_raw.csv  leg_measurement_working.SLDASM  ~$leg_measurement_working.SLDASM
ref/: NMPC.m  Observer.cpp  Observer.hpp
(+366 files in other folders)
